--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
